# armacell_paper

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements_full.txt  requirements_main.txt
arma_cell/: helpers.py  plotting.py
benchmarks/: common.py  elec_script.py  exchange_script.py  m4_script.py  moving_mnist.py  moving_squares.py  nyc_data.py  traffic_script.py
benchmarks/data/: exchange_processed.csv
benchmarks/data/NYBike/: bike_test.npz  bike_train.npz  bike_val.npz
benchmarks/data/NYTaxi/: taxi_test.npz  taxi_val.npz
models/: helpers.py  models.py
simulations/: arma_parameter_recovery.py  helpers.py  multivariate_simulation.py  univariate_simulation.py
test/: test_helpers.py  test_regression_arma_cell.py  test_unit_arma_cell.py
