[tool.poetry]
name = "ArmaCell"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.6.0"
statsmodels = "^0.12.2"
numpy = "^1.19.0"
pmdarima = "^1.8.2"
keras-tuner = "^1.0.3"
seaborn = "^0.11.1"
fire = "^0.4.0"
scikit-learn = "^0.24.2"
matplotlib = "^3.3.4"


[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
pre-commit = "^2.12.0"


[tool.black]
line-length = 160
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
